test/fail/lib/M.mo
module {
  public module class F() {
    public type T = Int;
    public let x : T = 1;
  }
};

